--- a/menu/src/main/res/drawable/black_corners_with_stroke_radius_50.xml
+++ b/menu/src/main/res/drawable/black_corners_with_stroke_radius_50.xml
@@ -3,11 +3,11 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/small_black"/>
+    <solid android:color="@color/transparent"/>
 
     <stroke
         android:width="1px"
-        android:color="#000000" />
+        android:color="@color/text_color_light_gray" />
 
     <corners
         android:bottomLeftRadius="50dp"
