--- a/menu/src/main/res/values/colors.xml
+++ b/menu/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
 
     <color name="text_color_dark_gray">#373737</color>
     <color name="text_color_gray">#332a27</color>
+    <color name="text_color_light_gray">#979090</color>
 </resources>
