--- a/menu/src/main/res/layout/normal_title_bar_layout.xml
+++ b/menu/src/main/res/layout/normal_title_bar_layout.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/normal_title_bar_main_bg_rel"
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="125px">
