--- a/menu/src/main/res/layout/rect_chart_item.xml
+++ b/menu/src/main/res/layout/rect_chart_item.xml
@@ -5,40 +5,40 @@
     android:orientation="horizontal">
 
     <View
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="15px"
+        android:layout_height="15px"
         android:background="@color/small_black"
         android:layout_margin="2dp"
         >
 
     </View>
     <View
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="15px"
+        android:layout_height="15px"
         android:background="@color/small_black"
         android:layout_margin="2dp"
         >
 
     </View>
     <View
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="15px"
+        android:layout_height="15px"
         android:background="@color/small_black"
         android:layout_margin="2dp"
         >
 
     </View>
     <View
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="15px"
+        android:layout_height="15px"
         android:background="@color/small_black"
         android:layout_margin="2dp"
         >
 
     </View>
     <View
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="15px"
+        android:layout_height="15px"
         android:background="@color/small_black"
         android:layout_margin="2dp"
         >
