--- a/menu/src/main/res/values/dimens.xml
+++ b/menu/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="text_size_8">8dp</dimen>
     <dimen name="text_size_20">20dp</dimen>
+    <dimen name="text_size_25">25dp</dimen>
     <dimen name="text_size_15">15dp</dimen>
     <dimen name="text_size_13">13dp</dimen>
     <dimen name="text_size_10">10dp</dimen>
