--- a/menu/src/main/res/layout/payment_success_activity.xml
+++ b/menu/src/main/res/layout/payment_success_activity.xml
@@ -58,7 +58,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
@@ -343,6 +343,32 @@
         </LinearLayout>
 
 
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="50px"
+            android:layout_height="228px"
+            android:layout_marginLeft="97px"
+            android:background="@drawable/red_corners_with_stroke_radius_5"
+            android:text="下\n一\n站\n去\n哪"
+            android:textColor="@color/text_color_gray"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_20"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/payment_success_activity_next_station_rv"
+            android:layout_width="match_parent"
+            android:layout_height="410px"
+            android:layout_marginLeft="72px"
+            />
     </LinearLayout>
 
 </LinearLayout>
