之前的修改

--- a/menu/src/main/res/layout/activity_waiting_time.xml
+++ b/menu/src/main/res/layout/activity_waiting_time.xml
@@ -227,42 +227,45 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="50"
+
             android:orientation="vertical">
 
             <FrameLayout
                 android:id="@+id/waittime_gridViewParent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/holo_blue"
                 >
 
                 <GridView
                     android:id="@+id/waittime_gridView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="743px"
                     android:layout_centerInParent="true"
 
-                    android:layout_gravity="center"
+                    android:layout_gravity="top"
                     android:numColumns="3"
                     android:horizontalSpacing="1px"
                     android:verticalSpacing="1px"
-                    android:stretchMode="columnWidth" />
+                    android:stretchMode="columnWidth"
+                    android:background="@color/red"/>
 
-                <RelativeLayout
-                    android:id="@+id/lottery_parent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="#BF000000">
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/lottery_parent"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:gravity="center"-->
+                    <!--android:background="#BF000000">-->
 
-                    <ImageView
-                        android:id="@+id/lottery"
-                        android:layout_width="410px"
-                        android:layout_height="315px"
-                        android:src="@mipmap/wait_time_lottery"
-                        android:onClick="adLottery"
-                        android:scaleType="fitXY"/>
+                    <!--<ImageView-->
+                        <!--android:id="@+id/lottery"-->
+                        <!--android:layout_width="410px"-->
+                        <!--android:layout_height="315px"-->
+                        <!--android:src="@mipmap/wait_time_lottery"-->
+                        <!--android:onClick="adLottery"-->
+                        <!--android:scaleType="fitXY"/>-->
 
-                </RelativeLayout>
+                <!--</RelativeLayout>-->
 
             </FrameLayout>
 
