--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <!--头部颜色-->
     <color name="activityHeadColor">#F9FAFB</color>
 
+    <color name="title_text_color">#58250D</color>
+
+    <color name="white">#FFFFFF</color>
+
 </resources>
