--- a/dishmap/src/main/res/layout/activity_store_detail.xml
+++ b/dishmap/src/main/res/layout/activity_store_detail.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:orientation="vertical">
-    <RelativeLayout
 
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <include
             android:id="@+id/title_layout"
             layout="@layout/title_bar_layout"
             android:layout_width="match_parent"
-            android:layout_height="59dp"></include>
+            android:layout_height="40dp"></include>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="2300px"
