--- a/dishmap/src/main/res/layout/title_bar_layout.xml
+++ b/dishmap/src/main/res/layout/title_bar_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="59dp"
-    android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+    >
+
+
         <ImageView
             android:id="@+id/title_back_iv"
             android:layout_width="wrap_content"
@@ -26,7 +25,7 @@
             android:layout_marginLeft="32dp"
             android:textColor="@color/title_text_color"
             android:textSize="@dimen/text_size_15" />
-    </RelativeLayout>
+    
 
 
 
