--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.feasttime.dishmap.MainActivity">
+    tools:context="com.feasttime.dishmap.activity.MainActivity">
 
 
     <FrameLayout
