--- a/dishmap/src/main/res/layout/activity_menu.xml
+++ b/dishmap/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.feasttime.dishmap.MenuActivity">
+    tools:context="com.feasttime.dishmap.activity.MenuActivity">
 
     <ImageView
         android:layout_marginTop="25dp"
