--- a/dishmap/src/main/res/layout/title_bar_layout.xml
+++ b/dishmap/src/main/res/layout/title_bar_layout.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerVertical="true"
-    >
+    android:layout_centerVertical="true">
 
 
         <ImageView
@@ -25,7 +23,17 @@
             android:layout_marginLeft="32dp"
             android:textColor="@color/title_text_color"
             android:textSize="@dimen/text_size_15" />
-    
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_center_text_tv"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="32dp"
+            android:layout_centerInParent="true"
+            android:textColor="@color/text_dark_gray"
+            android:textSize="@dimen/very_big_text_size" />
+
 
         <ImageView
             android:id="@+id/title_bar_share_iv"
