--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -12,10 +12,12 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="blue">#3BABBC</color>
-    <color name="bg_gray">#E5E5E5</color>
+    <color name="bg_gray">#F6FAF9</color>
 
-
+    <color name="text_dark_gray">#7F8489</color>
     <color name="text_black">#020202</color>
     <color name="text_hint_gray">#999999</color>
+    <color name="text_red">#C5474A</color>
+
 
 </resources>
