--- a/dishmap/src/main/res/values/dimens.xml
+++ b/dishmap/src/main/res/values/dimens.xml
@@ -9,4 +9,9 @@
     <dimen name="text_size_31">31dp</dimen>
     <dimen name="text_size_38">38dp</dimen>
 
+    <dimen name="normal_text_size">@dimen/x27</dimen>
+    <dimen name="big_text_size">@dimen/x30</dimen>
+    <dimen name="very_big_text_size">@dimen/x40</dimen>
+    <dimen name="small_text_size">@dimen/x24</dimen>
+
 </resources>
