--- a/dishmap/src/main/res/layout/activity_login.xml
+++ b/dishmap/src/main/res/layout/activity_login.xml
@@ -94,6 +94,7 @@
                 android:background="@null"
                 android:textSize="@dimen/normal_text_size"
                 android:maxLength="20"
+                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:layout_marginLeft="@dimen/x140"
                 android:textColorHint="@color/text_hint_gray"
                 android:layout_centerVertical="true"
@@ -130,6 +131,7 @@
 
 
      <TextView
+         android:id="@+id/activity_login_register_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="注册"
