增加人数对话框

--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="text_dark_gray">#7F8489</color>
     <color name="text_black">#020202</color>
     <color name="text_hint_gray">#999999</color>
+    <color name="line_gray">#F2F2F2</color>
     <color name="text_red">#C5474A</color>
 
 
