--- a/dishmap/src/main/res/values/styles.xml
+++ b/dishmap/src/main/res/values/styles.xml
@@ -13,4 +13,17 @@
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
+    <style name="DialogTheme" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <!-- 除去title -->
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 除去背景色 -->
+    </style>
+
 </resources>
