--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -137,119 +137,175 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="25dp">
+            android:layout_height="match_parent">
 
-            <!--搜索框-->
             <LinearLayout
-                android:id="@+id/searchLayout"
+                android:id="@+id/topLayout"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:padding="0dp"
-                android:background="@drawable/shape_search_bg"
-                android:clickable="true"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center"
-                        android:src="@mipmap/search_img"
-                        android:scaleType="centerInside"
-                        />
-
-                    <EditText
-                        android:id="@+id/search_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:hint="@string/search_hint"
-                        android:textSize="17sp"
-                        android:imeOptions="actionSearch"
-                        android:singleLine="true"
-                        android:background="@null"/>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/voice_img"
-                    />
-
-            </LinearLayout>
-
-            <!--右边功能框-->
-            <LinearLayout
-                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/searchLayout"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
                 android:padding="0dp"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/shape_function_bg"
-                android:clickable="true"
+
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/my"/>
+                <RelativeLayout
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/message"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    android:padding="0dp"
+                    android:background="@mipmap/top_bg_picture"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/path"/>
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/gift"/>
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_centerVertical="true"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/my" />
+
+                    <ImageView
+                        android:layout_width="75dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_centerHorizontal="true"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/logo" />
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:scaleType="fitCenter"
+                        android:src="@mipmap/message" />
+
+
+                </RelativeLayout>
 
             </LinearLayout>
 
+
+            <!--搜索框-->
+            <!--<LinearLayout-->
+                <!--android:id="@+id/searchLayout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:padding="0dp"-->
+                <!--android:background="@drawable/shape_search_bg"-->
+                <!--android:clickable="true"-->
+                <!--android:orientation="horizontal">-->
+
+                <!--<LinearLayout-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:orientation="horizontal">-->
+
+                    <!--<ImageView-->
+                        <!--android:layout_width="30dp"-->
+                        <!--android:layout_height="30dp"-->
+                        <!--android:layout_marginLeft="10dp"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:src="@mipmap/search_img"-->
+                        <!--android:scaleType="centerInside"-->
+                        <!--/>-->
+
+                    <!--<EditText-->
+                        <!--android:id="@+id/search_text"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:hint="@string/search_hint"-->
+                        <!--android:textSize="17sp"-->
+                        <!--android:imeOptions="actionSearch"-->
+                        <!--android:singleLine="true"-->
+                        <!--android:background="@null"/>-->
+
+                <!--</LinearLayout>-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:layout_marginRight="10dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@mipmap/voice_img"-->
+                    <!--/>-->
+
+            <!--</LinearLayout>-->
+
+            <!--右边功能框-->
+            <!--<LinearLayout-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/searchLayout"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:padding="0dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:background="@drawable/shape_function_bg"-->
+                <!--android:clickable="true"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="25dp"-->
+                    <!--android:layout_height="25dp"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@mipmap/my"/>-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="25dp"-->
+                    <!--android:layout_height="25dp"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@mipmap/message"/>-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="25dp"-->
+                    <!--android:layout_height="25dp"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@mipmap/path"/>-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="25dp"-->
+                    <!--android:layout_height="25dp"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_marginBottom="15dp"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:scaleType="fitCenter"-->
+                    <!--android:src="@mipmap/gift"/>-->
+
+            <!--</LinearLayout>-->
+
             <!--颜色提示框-->
+            <!--android:background="@drawable/shape_color_hint_bg"-->
             <LinearLayout
                 android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_height="60dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginRight="10dp"
                 android:padding="8dp"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:background="@drawable/shape_color_hint_bg"
+
 
                 android:orientation="vertical">
                 
@@ -273,25 +329,25 @@
                         android:textColor="#E24333"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="26dp"
-                    android:orientation="horizontal">
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="26dp"-->
+                    <!--android:orientation="horizontal">-->
 
-                    <ImageView
-                        android:layout_width="33dp"
-                        android:layout_height="9dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="8dp"
-                        android:background="#66D585"/>
+                    <!--<ImageView-->
+                        <!--android:layout_width="33dp"-->
+                        <!--android:layout_height="9dp"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:layout_marginRight="8dp"-->
+                        <!--android:background="#66D585"/>-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:text="@string/text_mezzo"
-                        android:textColor="#66D585"/>
-                </LinearLayout>
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:textSize="14sp"-->
+                        <!--android:text="@string/text_mezzo"-->
+                        <!--android:textColor="#66D585"/>-->
+                <!--</LinearLayout>-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -315,7 +371,7 @@
             </LinearLayout>
 
             <!--菜单按钮-->
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -324,21 +380,21 @@
                 android:background="@android:color/transparent">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="50dp"
-                    android:src="@mipmap/menu"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@mipmap/scan_qr_code"
                     android:scaleType="fitCenter"
                     android:onClick="touchMenu"
                     />
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
             <!--定位按钮-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="65dp"
+                android:layout_marginBottom="45dp"
                 android:layout_marginLeft="10dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
@@ -351,6 +407,17 @@
                     android:scaleType="fitCenter"
                     android:onClick="touchLocation"
                     />
+
+            </LinearLayout>
+
+            <!--定位按钮-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="0dp"
+                android:layout_alignParentBottom="true"
+                android:background="@mipmap/map_bottom_bg">
+
 
             </LinearLayout>
 
