--- a/dishmap/src/main/res/drawable/red_bg_radius_5.xml
+++ b/dishmap/src/main/res/drawable/red_bg_radius_5.xml
@@ -3,13 +3,9 @@
     android:shape="rectangle" >
 
     <!-- 边框填充的颜色 -->
-    <solid android:color="@color/white" />
+    <solid android:color="@color/text_red" />
 
     <!-- 设置进度条的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="5dp" />
-
-    <stroke
-        android:width="1px"
-        android:color="#dcdcdc" />
 </shape>
