--- a/dishmap/src/main/res/drawable/white_bg_radius_5_with_red_stroke.xml
+++ b/dishmap/src/main/res/drawable/white_bg_radius_5_with_red_stroke.xml
@@ -9,7 +9,5 @@
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="5dp" />
 
-    <stroke
-        android:width="1px"
-        android:color="#dcdcdc" />
+    <stroke android:color="@color/text_red" android:width="1dp"></stroke>
 </shape>
