--- a/dishmap/src/main/res/layout/fragment_merchant_reach_store_confirm.xml
+++ b/dishmap/src/main/res/layout/fragment_merchant_reach_store_confirm.xml
@@ -3,4 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/fragment_merchant_reach_store_confirm_content_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="@dimen/y20"
+        android:layout_marginLeft="@dimen/x30"
+        android:layout_marginTop="@dimen/x30"
+        android:layout_marginRight="@dimen/x30"
+        android:divider="#00000000"
+        >
+
+    </ListView>
+
 </LinearLayout>
