--- a/dishmap/src/main/res/values/dimens.xml
+++ b/dishmap/src/main/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="very_big_text_size">@dimen/x40</dimen>
     <dimen name="very_big_text_size_2">@dimen/x53</dimen>
     <dimen name="small_text_size">@dimen/x23</dimen>
+    <dimen name="very_small_text_size">@dimen/x20</dimen>
     <dimen name="final_big_text_size">@dimen/x76</dimen>
 </resources>
