--- a/dishmap/src/main/res/layout/activity_register.xml
+++ b/dishmap/src/main/res/layout/activity_register.xml
@@ -193,9 +193,21 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/x43"
                     android:src="@mipmap/eye" />
+
+
             </RelativeLayout>
 
         </RelativeLayout>
+
+        <CheckBox
+            android:id="@+id/activity_register_type_cb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="个人"
+            android:checked="true"
+            android:textSize="@dimen/big_text_size"
+            android:textColor="@color/text_dark_gray"
+            />
 
         <Button
             android:id="@+id/activity_register_register_btn"
