--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -22,18 +22,52 @@
             android:id="@+id/detail_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:layout_marginTop="85dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/white_bg_radius_10_no_border"
             android:orientation="vertical"
             android:visibility="gone">
 
-
-            <TextView
-                android:id="@+id/name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=""
-                android:textSize="23sp" />
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:text=""
+                    android:textColor="#DC2A21"
+                    android:textSize="19sp" />
+
+
+
+                <TextView
+                    android:id="@+id/address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginLeft="30dp"
+                    android:text=""
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <!--分割线-->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:background="@color/line_gray"/>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -84,12 +118,7 @@
                         android:textSize="17sp" />
 
 
-                    <TextView
-                        android:id="@+id/address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:textSize="13sp" />
+
 
                 </LinearLayout>
 
