--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="bg_gray">#F6FAF9</color>
 
     <color name="text_dark_gray">#7F8489</color>
+    <color name="gray">#E5E6E7</color>
     <color name="text_black">#020202</color>
     <color name="text_hint_gray">#999999</color>
     <color name="line_gray">#F2F2F2</color>
